# learning-emulators

./: Cargo.toml  README.md
crates/audio-core/: Cargo.toml
crates/chiprs/: Cargo.toml
crates/chiprs/src/: core.rs  lib.rs
crates/chiprs/src/core/: framebuffer.rs  instructions.rs  processor.rs  rom.rs
crates/emu-profilers/: Cargo.toml
crates/gamebors/: Cargo.toml
crates/gamebors/src/: lib.rs
crates/graphic-core/: Cargo.toml
crates/graphic-core/examples/: simple.rs
crates/graphic-core/examples/shaders/: simple.wgsl
crates/graphic-core/src/: lib.rs
crates/neo8/: Cargo.toml
crates/neo8/src/: lib.rs  main.rs
crates/neo8/src/core/: display.rs  mod.rs  processor.rs  tests.rs
crates/neo8/src/rom/: mod.rs
crates/res/: Cargo.toml
crates/res/src/: lib.rs
crates/sgfx/: Cargo.toml
crates/sgfx/examples/: trivial.rs
crates/sgfx/src/: events.rs  lib.rs  renderer.rs  shader.rs  window.rs
src/: main.rs
