[workspace]
members = ["crates/neo8", "crates/sgfx"]

# The resolver is a global setting for a workspace, and the setting is ignored in dependencies.
# The setting is only honored for the top-level package of the workspace.
# If you are using a virtual workspace, you will still need to explicitly set the resolver field
# in the [workspace] definition if you want to opt-in to the new resolver.
# https://github.com/rust-lang/cargo/issues/9996
resolver = "2"

# we use the workspace inherited config for the
# edition and such
package.edition = "2021"
