[workspace]
members = [ "crates/audio-core", "crates/chiprs", "crates/emu-profilers", "crates/gamebors","crates/graphic-core", "crates/res"]
resolver = "2"

[package]
name = "lemu"
description = "Collection of small emulators and libraries + tooling for them."
authors = ["Swarnim Arun <mail@swarnimarun.com>"]
edition = "2021"

[[bin]]
name = "lemu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["string", "env", "derive"] }
inquire = { version = "0.7.5", features = ["editor", "tempfile"] }
res = { path ="./crates/res" }
gamebors = { path ="./crates/gamebors" }
chiprs = { path ="./crates/chiprs" }

