[package]
name = "chiprs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["string", "env", "derive"] }
color-eyre = "0.6.3"
graphic-core = { path = "../graphic-core", optional = true }
pixels = { version = "0.13.0", optional = true }

[features]
default = ["pixels"]
pixels = [ "dep:pixels" ]
graphicscore = [ "dep:graphic-core" ]
