[package]
name = "graphic-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
wgpu = { version = "0.20.0", features = ["replay", "spirv"] }
winit = "0.30.0"

[dev-dependencies]
color-eyre = "0.6.3"
tokio = {version = "*", features = ["full"]}
